--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ pandas
 pickleshare
 matplotlib
 matplotlib-inline==0.1.6
-sklearn==0.0.post1
+scikit-learn>=1.2.0
 setuptools
 wheel
 python-dotenv
